# ping

./: Cargo.toml  README.md
.github/workflows/: main.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/test/: _setup.ts  ping.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: ping.rs
program/: Cargo.toml  README.md  idl.json
program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
scripts/: generate-clients.mjs
